# lazy_mjpeg_streamer

./: CMakeLists.txt  LICENSE  README.md  camera.hpp  camera_none.cpp  camera_pylon.cpp  camera_pylon.hpp  camera_realsense.cpp  camera_realsense.hpp  camera_ueye.cpp  camera_ueye.hpp  compress.cpp  compress.hpp  compress_jpeg.cpp  compress_webp.cpp  main.cpp  placeholder.hpp  placeholder.xcf  placeholder_jpeg.cpp  placeholder_webp.cpp  publisher.hpp  serve.cpp  serve.hpp  types.hpp
